--- a/gasto/package.json
+++ b/gasto/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.1.0",
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.1",
+    "jquery": "^3.6.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/crypto-js": "^4.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^12.20.39",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
