--- a/gasto/package.json
+++ b/gasto/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.6.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
+    "toastify-js": "^1.11.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
