--- a/gasto/package.json
+++ b/gasto/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.1",
     "jquery": "^3.6.0",
+    "ng-mocks": "^13.0.2",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "toastify-js": "^1.11.2",
